feat: ゲームの共通レイアウトと仕様書表示の基盤を構築
ゲームの量産に向けた基盤整備の第一歩として、全ゲームで共通利用できるUIレイアウトと、仕様書（ルール等）を管理・表示するための仕組みを導入する。

主な変更点:

*   共通レイアウトの導入:
    *   `app/components/GameLayout.tsx` を新設し、ヘッダー（ゲーム名、ボタン類）とゲーム本体の表示領域を共通化。
    *   `app/components/Modal.tsx` を新設し、ルール表示などに利用できる汎用的なモーダルUIを提供。
*   仕様書の仕組みを整備:
    *   `types/game.ts` に `GameManifest` 型を定義し、各ゲームが `rules.md` と `spec.md` を持つことを規約化。
    *   `games/[slug]/page.tsx` で `rules.md` を読み込み、UIに渡す処理を実装。
*   技術ガイドの更新:
    *   新しいゲームの追加方法、`manifest.json` の仕様、共通コンポーネントの利用方法などを `docs/ai-workflow/2-technical-guide.md` に明記。

背景:

今後のゲーム開発を効率化し、一貫性のあるユーザー体験を提供するため。
まずはライブラリ導入を避け、既存機能で実現可能な範囲で実装した。Markdownのレンダリングやテスト基盤の導入は、今後の課題とする。

--- a/games/tictactoe/manifest.json
+++ b/games/tictactoe/manifest.json
@@ -1,9 +1,6 @@
 {
   "name": "Tic-Tac-Toe",
-  "short_name": "Tic-Tac-Toe",
-  "description": "A simple Tic-Tac-Toe game.",
-  "start_url": ".",
-  "display": "standalone",
-  "background_color": "#fff",
-  "theme_color": "#fff"
+  "path": "/games/tictactoe",
+  "rulesFile": "/games/tictactoe/rules.md",
+  "specFile": "/games/tictactoe/spec.md"
 }
