--- a/games/tictactoe/manifest.json
+++ b/games/tictactoe/manifest.json
@@ -1,5 +1,6 @@
 {
-  "name": "Tic-Tac-Toe",
+  "name": "三目並べ",
+  "description": "シンプルな〇×ゲームです。",
   "path": "/games/tictactoe",
   "rulesFile": "/games/tictactoe/rules.md",
   "specFile": "/games/tictactoe/spec.md"
