feat(docs): 仕様書を動作と表示に分割し、ルールを更新
技術ガイドを更新し、ゲームの仕様書を「システム動作仕様 (`spec-action.md`)」と「システム表示仕様 (`spec-display.md`)」に分割する新しいルールを導入しました。

- **技術ガイドの更新:**
    - 新しいディレクトリ構成と`manifest.json`の仕様を定義。
    - 仕様書は実装に依存しない自然言語で記述する原則を追加。
- **既存仕様書の移行:**
    - ◯×ゲームとリバーシの既存の`spec.md`を削除。
    - 新しいフォーマットに従い、`spec-action.md`と`spec-display.md`をそれぞれ作成。
- **型定義の更新:**
    - `types/game.ts`の`GameManifest`型を`manifest.json`の変更に合わせて更新。

これにより、仕様の責務が明確になり、今後の開発やテスト作成の効率化が期待されます。

--- a/games/reversi/manifest.json
+++ b/games/reversi/manifest.json
@@ -3,5 +3,6 @@
   "description": "相手の石を挟んでひっくり返す古典的なボードゲームです。",
   "path": "/games/reversi",
   "rulesFile": "/games/reversi/rules.md",
-  "specFile": "/games/reversi/spec.md"
+  "specActionFile": "/games/reversi/spec-action.md",
+  "specDisplayFile": "/games/reversi/spec-display.md"
 }
