--- a/games/tictactoe/manifest.json
+++ b/games/tictactoe/manifest.json
@@ -3,5 +3,6 @@
   "description": "シンプルな〇×ゲームです。",
   "path": "/games/tictactoe",
   "rulesFile": "/games/tictactoe/rules.md",
-  "specFile": "/games/tictactoe/spec.md"
+  "specActionFile": "/games/tictactoe/spec-action.md",
+  "specDisplayFile": "/games/tictactoe/spec-display.md"
 }
