feat(naming): ゲーム命名規則を技術ガイドに定義
- `manifest.json` の `name`, `displayName`, `shortDescription` の用途を技術ガイド (`docs/ai-workflow/2-technical-guide.md`) に明記しました。
    - `name`: 内部的な正式名称（英語推奨）
    - `displayName`: UI表示用のゲーム名（日本語、親しみやすい表現）
    - `shortDescription`: トップページなどで表示する簡潔な説明文

これにより、プロジェクト全体でのゲーム名の表記と表示に関する一貫性が確保されます。

--- a/games/reversi/manifest.json
+++ b/games/reversi/manifest.json
@@ -1,6 +1,7 @@
 {
-  "name": "リバーシ",
-  "description": "相手の石を挟んでひっくり返す古典的なボードゲームです。",
+  "name": "Reversi",
+  "displayName": "リバーシ",
+  "shortDescription": "相手の石を挟んでひっくり返す古典的なボードゲームです。",
   "path": "/games/reversi",
   "rulesFile": "/games/reversi/rules.md",
   "specActionFile": "/games/reversi/spec-action.md",
