--- a/games/reversi/manifest.json
+++ b/games/reversi/manifest.json
@@ -1,7 +1,9 @@
 {
-  "name": "リバーシ",
-  "description": "相手の石を挟んでひっくり返す古典的なボードゲームです。",
+  "name": "Reversi",
+  "displayName": "リバーシ",
+  "shortDescription": "相手の石を挟んでひっくり返す古典的なボードゲームです。",
   "path": "/games/reversi",
   "rulesFile": "/games/reversi/rules.md",
-  "specFile": "/games/reversi/spec.md"
+  "specActionFile": "/games/reversi/spec-action.md",
+  "specDisplayFile": "/games/reversi/spec-display.md"
 }
