fix: lint-staged のビルド実行設定を修正
- `lint-staged` の設定を修正し、TypeScript/TSX ファイルの変更時にのみビルドが実行されるようにしました。
- これにより、コード変更時にはテストとビルドの両方が実行され、Markdown ドキュメントの変更時にはスキップされるようになります。

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "vitest related --run"
+      "vitest related --run",
+      "bash -c \"npm run build\""
     ]
   },
   "dependencies": {
