--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "lint-staged": {
     "*.{ts,tsx}": [
       "vitest related --run",
+      "bash -c \"npm run lint\"",
       "bash -c \"npm run build\""
     ]
   },
