fix: Husky v9 への移行と非推奨警告の解消
- Husky の設定を v9 の推奨形式に移行し、非推奨警告を解消しました。
- `package.json` から `husky` と `lint-staged` の設定を削除し、`prepare` スクリプトを追加しました。
- 新しい `.husky/pre-commit` ファイルを作成し、`lint-staged` を実行するように設定しました。

--- a/package.json
+++ b/package.json
@@ -8,19 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest",
-    "test:ui": "vitest --ui"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "vitest related --run",
-      "bash -c \"npm run lint\"",
-      "bash -c \"npm run build\""
-    ]
+    "test:ui": "vitest --ui",
+    "prepare": "husky"
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
