fix: lint-staged のリンティング設定を修正
- `lint-staged` のリンティング設定を修正し、`npm run lint -- --max-warnings=0` を直接実行するようにしました。
- これにより、リンティングエラーがあればコミットをブロックするようになります。

--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "test:ui": "vitest --ui",
     "prepare": "husky"
   },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "vitest related --run",
+      "npm run lint -- --max-warnings=0",
+      "bash -c \"npm run build\""
+    ]
+  },
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "next": "15.4.4",
