fix: Husky v9 への移行とコミット前リンティング設定の修正 (#36)
* fix: Husky v9 への移行と非推奨警告の解消

- Husky の設定を v9 の推奨形式に移行し、非推奨警告を解消しました。
- `package.json` から `husky` と `lint-staged` の設定を削除し、`prepare` スクリプトを追加しました。
- 新しい `.husky/pre-commit` ファイルを作成し、`lint-staged` を実行するように設定しました。

* test: リンティングエラー発生テスト

* fix: lint-staged のリンティング設定を修正

- `lint-staged` のリンティング設定を修正し、`npm run lint -- --max-warnings=0` を直接実行するようにしました。
- これにより、リンティングエラーがあればコミットをブロックするようになります。

--- a/package.json
+++ b/package.json
@@ -8,17 +8,13 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest",
-    "test:ui": "vitest --ui"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "test:ui": "vitest --ui",
+    "prepare": "husky"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
       "vitest related --run",
-      "bash -c \"npm run lint\"",
+      "npm run lint -- --max-warnings=0",
       "bash -c \"npm run build\""
     ]
   },
