--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "gemini": "gemini",
+    "license-update": "npx license-checker --production --json | node -e 'const data = JSON.parse(require(\"fs\").readFileSync(0, \"utf-8\")); const header = `This file contains the licenses for the libraries used in this project.\n\n`; const out = Object.keys(data).map(key => { const pkg = data[key]; return `================================================================================\n\nPackage: ${key}\nLicense: ${pkg.licenses}\nRepository: ${pkg.repository}\n\n${pkg.licenseText || \"(License text not found.)\"}`; }).join(\"\n\n"); console.log(header + out);' > public/licenses.txt",
     "prepare": "husky"
   },
-  
   "dependencies": {
     "autoprefixer": "^10.4.21",
     "next": "15.4.4",
@@ -34,6 +34,7 @@
     "eslint-config-next": "15.4.4",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
+    "license-checker": "^25.0.1",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.2.4"
