feat(workflow): add script directory and automate license updates
- `package.json` の可読性・保守性向上のため、`scripts` ディレクトリを導入。
- 複雑なライセンス更新ロジックを `scripts/license-update.js` に分離。
- `npm run license-update` は上記スクリプトを呼び出すように変更。
- `npm install` 後の `postinstall` フックでライセンス更新を自動化。
- 上記のアーキテクチャ変更を `setup-log.md` に記録。

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "gemini": "gemini",
-    "license-update": "npx license-checker --production --json | node -e 'const data = JSON.parse(require(\"fs\").readFileSync(0, \"utf-8\")); const header = `This file contains the licenses for the libraries used in this project.\n\n`; const out = Object.keys(data).map(key => { const pkg = data[key]; return `================================================================================\n\nPackage: ${key}\nLicense: ${pkg.licenses}\nRepository: ${pkg.repository}\n\n${pkg.licenseText || \"(License text not found.)\"}`; }).join(\"\n\n"); console.log(header + out);' > public/licenses.txt",
-    "prepare": "husky"
+    "license-update": "npx license-checker --production --json | node scripts/license-update.js",
+    "prepare": "husky",
+    "postinstall": "npm run license-update"
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
