--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Verify license file is up-to-date
+        run: |
+          npm run license-update
+          git diff --exit-code public/licenses.txt
+
       - name: Run tests
         run: npm test
 
