feat(test): E2Eテスト環境の整備と開発ワークフローの改善
Playwrightを使用したE2Eテストの実行環境を全面的に見直し、ローカルとCIの両方で安定して動作するように修正しました。
また、開発体験の向上を目的として、関連するワークフローとドキュメントを更新しました。

主な変更点:
- **E2Eテストの安定化:**
  - `playwright.config.ts`の`webServer`コマンドを`npm run dev`に変更し、テストが常に開発サーバーに対して実行されるように修正。これにより、ローカル環境でのテスト失敗問題を解消。
- **Playwrightセットアップの自動化:**
  - `package.json`の`postinstall`スクリプトに`playwright install`を追加。`npm install`だけでE2Eテストのセットアップが完了するように改善。
  - 上記に伴い、CIワークフローから冗長なインストールステップを削除。
- **依存関係の整理:**
  - テスト環境の変更により不要となった`serve`パッケージを削除。
- **ドキュメントの更新:**
  - `technical-guide.md`: `npm install`だけでテスト環境が整うことを明記。
  - `human-guide.md`: AIへの指示テンプレートを改善し、ルール遵守をより強く促すように変更。
  - `setup-log.md`: 今回のテスト環境整備に関する意思決定の経緯を記録。

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gemini": "gemini",
     "license-update": "npx license-checker --production --json | node scripts/license-update.js",
     "prepare": "husky",
-    "postinstall": "npm run license-update"
+    "postinstall": "npx playwright install --with-deps && npm run license-update"
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
@@ -38,7 +38,6 @@
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "license-checker": "^25.0.1",
-    "serve": "^14.2.3",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.2.4"
