fix(e2e): Resolve E2E test failures related to basePath and hint feature
E2EテストがbasePathの不一致とリバーシのヒント機能の初期値設定により失敗していました。
PlaywrightのbaseURLをbasePathを含む形に修正し、webServerのコマンドを静的ファイルサーバーに変更しました。
また、リバーシのhintLevelの初期値をテストの期待値と一致させました。
ナビゲーションテストとhasami-shogiテストのURL期待値をbasePathを含む絶対URLに修正しました。

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gemini": "gemini",
     "license-update": "npx license-checker --production --json | node scripts/license-update.js",
     "prepare": "husky",
-    "postinstall": "npx playwright install --with-deps && npm run license-update"
+    "postinstall": "npx playwright install && npm run license-update"
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
