--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@eslint/eslintrc": "^3",
     "@google/gemini-cli": "^0.1.22",
     "@playwright/test": "^1.54.2",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
