--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.18.1' # .nvmrcで指定されたバージョン
+          node-version-file: '.node-version'
 
       - name: Install dependencies
         run: npm install
