feat: Spec Kitを導入し、AI駆動開発向けに設定
AI駆動開発ワークフローを可能にするため、Spec Kitをプロジェクトに統合しました。

このコミットには以下の内容が含まれます:
- Python仮想環境を除外するため、`.venv`を`.gitignore`に追加。
- `package.json`を修正:
  - `specify` CLIを実行するための`spec`スクリプトを追加。
  - `postinstall`スクリプトを更新し、Python仮想環境の自動セットアップ、`uv`のインストール、および公式GitHubリポジトリからの`specify-cli`のインストールを含めるように変更。
- `specify init --here --ai gemini`を使用してSpec Kitを初期化し、以下を生成:
  - コマンド設定（`plan.toml`, `specify.toml`, `tasks.toml`）を含む`.gemini/`ディレクトリ。
  - メモリ、スクリプト、テンプレート（`constitution.md`, `bash`スクリプト, `agent-file-template.md`など）を含む`.specify/`ディレクトリ。

この設定により、仕様、計画、タスクの作成など、Gemini CLIとSpec Kitを使用したAI駆動開発が可能になります。

--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "test:e2e": "npx playwright test",
     "test:e2e-ui": "npx playwright test --ui",
     "gemini": "gemini",
+    "spec": ".venv/bin/specify",
     "update:license": "node scripts/license-update.js",
     "prepare": "husky",
-    "postinstall": "npx playwright install && npm run update:license"
+    "postinstall": "npx playwright install && python3 -m venv .venv && .venv/bin/pip install uv \"specify-cli@git+https://github.com/github/spec-kit.git\" && npm run update:license"
   },
   "dependencies": {
     "next": "^15.5.2",
